<resources>

    <string name="app_name">SPICARI</string>
    <string name="title_section3">Notification</string>
    <string name="title_section2">Image</string>
    <string name="title_section1">Server</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">spicari</string>
    <string name="frag_image">image</string>
    
    <!-- server settings screen -->
    <string name="hostname">Hostname</string>
    <string name="username">Username</string>
    <string name="output">Log output</string>
    <string name="remote_folder">Remote Folder</string>
    <string name="password">Password</string>
    <string name="connect">Test connection</string>
    <string name="port">Port</string>
    <string name="type">Type</string>

</resources>