<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_ftp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/hostname" />

            <EditText
                android:id="@+id/editText_hostname"
                style="@style/Entry"
                android:layout_weight="2"
                android:hint="@string/hostname"
                android:inputType="textUri" >
            </EditText>
        </LinearLayout>

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/port" />

            <EditText
                android:id="@+id/editText_port"
                style="@style/Entry"
                android:layout_weight="2"
                android:hint="@string/port"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editText_user"
                style="@style/Entry"
                android:layout_weight="2"
                android:hint="@string/username"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editText_password"
                style="@style/Entry"
                android:layout_weight="2"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout style="@style/LLContainer" >

            <TextView
                style="@style/Description"
                android:layout_weight="1"
                android:text="@string/remote_folder" />

            <EditText
                android:id="@+id/editText_folder"
                style="@style/Entry"
                android:layout_weight="2"
                android:hint="@string/remote_folder"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/connect" />

        <TextView
            android:layout_margin="20dp"
            android:id="@+id/textViewOutput"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:background="@drawable/border"
            android:padding="5dp"
            android:paddingLeft="15dp"
            android:hint="@string/output"
            android:maxLines="50"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>